--- a/app/views/omaha_reports/_details.html.erb
+++ b/app/views/omaha_reports/_details.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-6 col-sm-4 col-md-4">
       <div class="card-pf card-pf-accented card-pf-aggregate-status">
         <h2 class="card-pf-title">
-          <span class="fa fa-cube"></span>Version
+          <span class="fa fa-cube"></span><%= _('Version') %>
         </h2>
         <div class="card-pf-body">
           <p class="card-pf-aggregate-status-notifications">
@@ -15,11 +15,13 @@
     <div class="col-xs-6 col-sm-4 col-md-4">
       <div class="card-pf card-pf-accented card-pf-aggregate-status">
         <h2 class="card-pf-title">
-          <span class="fa fa-download"></span>Status
+          <span class="fa fa-download"></span><%= _('Status') %>
         </h2>
         <div class="card-pf-body">
           <p class="card-pf-aggregate-status-notifications">
-          <span class="card-pf-aggregate-status-notification"><span class="<%= iconclass_for_omaha_status(status) %>"></span> <%= label %></span>
+            <span class="card-pf-aggregate-status-notification" title="<%= description %>">
+              <span class="<%= iconclass_for_omaha_status(status) %>"></span> <%= label %>
+            </span>
           </p>
         </div>
       </div>
