--- a/app/views/omaha_reports/show.html.erb
+++ b/app/views/omaha_reports/show.html.erb
@@ -12,7 +12,7 @@
   </div>
 <% end %>
 
-<%= render 'details', :label => @omaha_report.to_label, :status => @omaha_report.status, :version => @omaha_report.omaha_version %>
+<%= render 'details', :label => @omaha_report.to_label, :status => @omaha_report.status, :version => @omaha_report.omaha_version, :description => @omaha_report.to_description %>
 
 <%= title_actions link_to(_('Back'), :back, :class => 'btn btn-default'),
   display_delete_if_authorized(hash_for_omaha_report_path(:id => @omaha_report), :class=> "btn btn-danger"),
