--- a/app/views/omaha_hosts/index.html.erb
+++ b/app/views/omaha_hosts/index.html.erb
@@ -8,7 +8,7 @@
       <div class="list-group-item">
         <div class="list-view-pf-main-info">
           <div class="list-view-pf-left">
-            <span class="<%= list_view_class_for_omaha_status(host.omaha_facet.status) %>" title="<%= host.omaha_facet.to_status_label %>"></span>
+            <span class="<%= list_view_class_for_omaha_status(host.omaha_facet.status) %>" title="<%= _(host.omaha_facet.to_status_label) %>"></span>
           </div>
           <div class="list-view-pf-body">
             <div class="list-view-pf-description">
