--- a/app/views/omaha_groups/show.html.erb
+++ b/app/views/omaha_groups/show.html.erb
@@ -108,6 +108,21 @@
       </div>
     </div>
   </div>
+  <!-- version breakdown bar card -->
+  <div class="row row-cards-pf">
+    <div class="col-xs-12 col-md-12">
+      <div class="card-pf card-pf-accented">
+        <div class="card-pf-heading">
+          <h2 class="card-pf-title">
+            <%= _('Version Distribution') %>
+          </h2>
+        </div>
+        <div class="card-pf-body">
+          <%= omaha_version_breakdown_bar(@omaha_group) %>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- out of sync hosts cards -->
   <div class="row row-cards-pf">
     <div class="col-xs-12 col-md-12">
