--- a/app/views/omaha_groups/show.html.erb
+++ b/app/views/omaha_groups/show.html.erb
@@ -134,7 +134,7 @@
         </div>
         <div class="card-pf-body">
           <% if @out_of_sync.count > 0 %>
-            <table class="table table-striped table-condensed table-fixed">
+            <table class="<%=table_css_classes 'table-condensed table-fixed' %>">
               <thead>
                 <tr>
                   <th><%= _('Host') %></th>
