--- a/app/views/omaha_reports/show.html.erb
+++ b/app/views/omaha_reports/show.html.erb
@@ -1,5 +1,6 @@
 <%= javascript 'reports' %>
 <% title "#{@omaha_report.host}"%>
+<% breadcrumbs(switchable: false) %>
 
 <p class='ra'> <%= _("Reported at %s ") % @omaha_report.reported_at %> </p>
 <% if @offset > 10 %>
