--- a/app/views/omaha_reports/welcome.html.erb
+++ b/app/views/omaha_reports/welcome.html.erb
@@ -4,9 +4,9 @@
   </div>
   <h1><%= _('Omaha Reports') %></h1>
   <p>
-  <%= _("You don't seem to have any omaha reports.") %></br>
-  <%= _('If you wish to configure CoreOS to forward reports to Foreman, please follow') %>
-  <%= link_to _("the documentation"), 'https://github.com/timogoebel/foreman_omaha', :rel => "external" %>.
+  <%= _("You don't seem to have any Omaha reports.") %></br>
+  <%= _('If you wish to configure Container Linux to forward reports to Foreman, please follow') %>
+  <%= link_to _("the documentation"), 'https://github.com/theforeman/foreman_omaha', :rel => 'external' %>.
   </p>
   <div class="blank-slate-pf-main-action">
     <%= link_to _('Documentation'), 'https://github.com/theforeman/foreman_omaha', :rel => 'external', :class => 'btn btn-primary btn-lg' %>
